test-deployments/templates/jupyter-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-dev-service
  namespace: test-deployments
spec:
  selector:
    app: jupyter-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
